# medicos-mcp

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  env.example  nginx.example.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
credentials/: .gitkeep
mcp_server/: __init__.py  armor_iq_client.py  config.py  firebase_client.py  http_server.py  llm_client.py  main.py
mcp_server/models/: __init__.py  context.py
mcp_server/tools/: __init__.py  adherence_tools.py  drug_tools.py  firebase_tools.py  governance_helper.py  governance_tools.py  notify_tools.py  ocr_tools.py  rx_tools.py  schedule_tools.py
