[project]
name = "medicos-mcp-backend"
version = "0.1.0"
description = "MCP server backend for the Medicos hospital medicine reminder app"
requires-python = ">=3.10"
dependencies = [
    "mcp",                     # Official MCP Python SDK
    "anyio>=4.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "firebase-admin>=6.5.0",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-storage>=2.16.0",
    "httpx>=0.27.0",
    "openai>=1.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server"]

